--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
 	<property name="build" location="build" />
 	<property name="build.bin" location="build\bin" />
 	<property name="release" location="build\release" />
-	<property name="version" value="1.3.b1" />
+	<property name="version" value="1.3.b2" />
 	
 	
 	<path id="compile.classpath">
@@ -34,8 +34,8 @@
 				optimize="true" 
 				deprecation="true" 
 				extdirs=""
-	    		source="1.5"
-	    		target="1.5">
+	    		source="1.6"
+	    		target="1.6">
 		</javac>
 			
 	</target>
@@ -46,6 +46,8 @@
 		<jar jarfile="${release}/lib/argot-model-${version}.jar" basedir="${build.bin}" >
 		</jar>
 
+		<jar jarfile="${release}/lib/argot-model-${version}-sources.jar" basedir="src/main/java" >
+		</jar>
 
 		<copy file="README.TXT" tofile="${release}/README.TXT" />
 
