Added eclipse plugin to gradle config.

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,15 @@
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'nexus'
+
+// Development environments
 apply plugin: 'idea'
+apply plugin: 'eclipse'
+eclipse {
+     classpath {
+        defaultOutputDir = new File("$buildDir/eclipse");
+     }
+}
 
 group = 'org.argot-sdk'
 version = '1.3.7-SNAPSHOT'
